# df

./: .gitignore  01-product-goals.md  03-architecture-guidelines.md  07-outputs-and-html-export.md  08-implementation-plan.md  CLAUDE.md  Cargo.toml  MARKET_SELECTION.md  PROMPT_PLAYBOOK.md  README.md  SPEC.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
config/: default.json  default.toml  live.toml  paper.json  production.json
config/tracked_wallets/: arbitrage_wallets.toml  arbitrage_wallets.txt  directional_wallets.toml  directional_wallets.txt
data/analysis/: wallet_report_2026-03-23T17-03-43.html
docs/: 02-polymarket-reality.md  04-simulation-accounting.md  05-fees-and-market-data.md  06-reliability-and-testing.md
scripts/: clean.sh  wallet_analysis.ts
src/: lib.rs  main.rs  main.ts
src/analytics/: consistency_checker.ts  market_classifier.ts  propagation_model.ts  reports.ts  types.ts
src/cli/: mod.rs  replay.rs  report.rs  run.rs  status.rs  wallets.rs
src/config/: mod.rs  schema.rs  wallets.rs
src/core/: book.rs  event.rs  fees.rs  mod.rs  trade_time_books.rs  types.rs
src/counterfactual/: attribution.ts  shadow_engine.ts
src/execution/: executor.ts  reconciliation.ts
src/ingestion/: book_poller.ts  clob_websocket.ts  market_graph_builder.ts  market_metadata.ts  mod.rs  onchain.rs  rest_book.rs  rest_metadata.rs  rest_wallets.rs  types.ts  wallet_activity_poller.ts  wallet_listener.ts  ws_market.rs
src/ledger/: ledger.ts  replay.ts  types.ts
src/report/: analytics.rs  html.rs  mod.rs
tests/: config_tests.rs
(+67 files in other folders)
